kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pp.center-rog.si
      secretName: consul-rog-tls
  rules:
    - host: pp.center-rog.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consul
                port:
                  number: 3000
